/*
 * Copyright 2024 CuteTrade's contributors
 *
 *    Licensed under the Apache License, Version 2.0 (the "License");
 *    you may not use this file except in compliance with the License.
 *    You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *    Unless required by applicable law or agreed to in writing, software
 *    distributed under the License is distributed on an "AS IS" BASIS,
 *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
 */

syntax = "proto3";

package cutetrade.protobuf.common;

import "google/protobuf/timestamp.proto";

option java_package = "cutetrade.protobuf";
option java_outer_classname = "CommonProto";

message Player {
    string name = 1;
    repeated string trade_ids = 2;
}

message Trade {
    string id = 1;
    google.protobuf.Timestamp start_time = 2;
    google.protobuf.Timestamp end_time = 3;

    string red_name = 4;
    string blue_name = 5;

    repeated TradeItem content_history = 6;
    TradeResult trade_result = 7;

    repeated TradeItem red_item_result = 8;
    repeated TradeItem blue_item_result = 9;
}

message TradeItem {
    string nbt = 1;

//    google.protobuf.Timestamp add_time = 5;
    string add_by_name = 2;
}

enum TradeResult {
    TRADE_RESULT_FINISHED = 0;
    TRADE_RESULT_TERMINATED = 1;
    TRADE_RESULT_DEFAULT = 2;
}