/*
 * Copyright 2024 CuteTrade's contributors
 *
 *    Licensed under the Apache License, Version 2.0 (the "License");
 *    you may not use this file except in compliance with the License.
 *    You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *    Unless required by applicable law or agreed to in writing, software
 *    distributed under the License is distributed on an "AS IS" BASIS,
 *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
 */

syntax = "proto3";

package cutetrade.protobuf.storable;

import "common.proto";

option java_package = "cutetrade.protobuf";
option java_outer_classname = "StorableProto";

message PlayerStore {
    map<string, common.Player> name_to_player = 1;
}

message TradeStore {
    map<string, string> trade_id_to_player_name = 1;
    map<string, common.Trade> trade_id_to_trade = 2;
}